--- a/針鯖.html
+++ b/針鯖.html
@@ -8,73 +8,87 @@
   <body>
     <!--header-->
     <header>
+      <img src="image/logo.png">
       <ul>
-        <li>About</li>
-        <li>Skills</li>
-        <li>Portfolio</li>
+        <li><a href="#about">About</a></li>
+        </li><a href="#skills">Skills</a>></li>
+        <li><a href="#portfolio">Portfolio</a></li>
       </ul>
     </header>
+
     <!--top-->
-    <div class="針鯖のWebページ">
-      <h1>針鯖野Webページ</h1> 
+    <div class="top">
+      <h1>Taro's Portfolio</h1>
     </div>
+
     <!--about-->
-    <div class="針鯖とは">
+    <div class="about" id="about">
       <h2>About</h2>
-      <hr>
+      <hr class="blue-line">
+      <img src="image/man.png">
       <p>
-        針鯖では基本ハリティムの7人でサバイバルをするサーバーです。
+        5年間都内の制作会社でデザイナーとして勤務後、フリーランスへ転向
         <br>
-        基本的に自由で、まったりサバイバルをしています
+        UIデザイン、フロントエンジニアリングで活動中
       </p>
-      <table>
-        <tr>
-          <td>鯖主</td>
-          <td>：にこら</td>
-        </tr>
-        <tr>
-          <td>活動地</td>
-          <td>：福岡県、広島県</td>
-        </tr>
-        <tr>
-          <td>お問い合わせ</td>
-          <td>：/td>
-        </tr>
-      </table>
-    </div>
-    <!--skills-->
-    <div class="針鯖の実力">
       <h2>Skills</h2>
       <hr>
       <div class="box">
-        <b>>サバイバル</b><br>
-        ★★★★☆
+        <img src="image/mura.JPG">
       </div>
       <div class="box">
-        <b>建築</b><br>
-        ★★★☆☆
+        <img src="image/css.png">
       </div>
       <div class="box">
-        <b>IT、プログラミングスキル</b><br>
+        <img src="image/ps.png">
+      </div>
+      <div class="box">
+        <img src="image/ai.png">
+      </div>
+    </div>
+
+    <!--skills-->
+    <div class="skills" id="skills">
+      <h2>Skills</h2>
+      <hr class="blue-line">
+      <div class="box">
+        <b>HTML5</b><br>
         ★★★★★
       </div>
       <div class="box">
-        <b>動画編集スキル</b><br>
+        <b>CSS3</b><br>
+        ★★★★★
+      </div>
+      <div class="box">
+        <b>Photoshop</b><br>
+        ★★★★☆
+      </div>
+      <div class="box">
+        <b>Illustrator</b><br>
         ★★★★☆
       </div>
     </div>
+
     <!--portfolio-->
-    <div class="針鯖の作品">
-      <h2>針鯖の作品</h2>
-      <hr>
+    <div class="portfolio" id="portfolio">
+      <h2>Portfolio</h2>
+      <hr class="blue-line">
       <div class="card">
-        <h3>質問フォーム</h3>
+        <img src="image/hp1.jpg">
+        <h3>カフェHP</h3>
         <p>Design / HTML, CSS/ Photo</p>
       </div>
       <div class="card">
-        <h3>針鯖の様子</h3>
-        <p>Planning 
+        <img src="image/hp2.jpg">
+        <h3>クリニックHP</h3>
+        <p>Planning / Design / HTML, CSS</p>
+      </div>
+    </div>
+
+    <!--footer-->
+    <footer>
       &copy; 2020 Taro Enuno All rights reserved.
     </footer>
+
   </body>
 </html>
