--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
     <!--header-->
     <header>
       <ul>
-        <li>針鯖とは7人のグループでマイクラサバイバルをしているサーバーです。</li>
-        <li>針鯖のスキル/li>
+        <li>針鯖とは</li>
+        <li>針鯖のスキル</li>
         <li>針鯖のポートフォリオ</li>
       </ul>
     </header>
@@ -38,7 +38,7 @@
         </tr>
         <tr>
           <td></td>
-          <td>：</td>
+          <td></td>
         </tr>
       </table>
     </div>
@@ -69,16 +69,16 @@
       <hr>
       <div class="card">
         <h3>過去の作品</h3>
-        <p>Design / HTML, CSS/ Photo</p>
+        <p></p>
       </div>
       <div class="card">
         <h3>質問フォーム</h3>
-        <p>Planning / Design / HTML, CSS</p>
+        <p></p>
       </div>
     </div>
     <!--footer-->
     <footer>
-      &copy; 2020 Taro Enuno All rights reserved.
+      &copy; 2024 harisaba All rights reserved.
     </footer>
   </body>
 </html>
