--- a/index.html
+++ b/index.html
@@ -2,16 +2,16 @@
 <html>
   <head>
     <meta charset="utf-8">
-    <title>Portfolio</title>
+    <title>針鯖のホームページ</title>
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
     <!--header-->
     <header>
       <ul>
-        <li>針鯖とは</li>
-        <li>針鯖のスキル</li>
-        <li>針鯖のポートフォリオ</li>
+        <li<a href="#about">針鯖とは</a><li>
+        <li><a href="#skills">針鯖のスキル</a></li>
+        <li><a href="#portfolio">針鯖のポートフォリオ</a>/<li>
       </ul>
     </header>
     <!--top-->
@@ -19,7 +19,7 @@
       <h1>針鯖のポートフォリオ</h1>
     </div>
     <!--about-->
-    <div class="針鯖とは">
+    <div class="針鯖とは" id="針鯖とは">
       <h2>針鯖とは</h2>
       <hr>
       <p>
@@ -43,7 +43,7 @@
       </table>
     </div>
     <!--skills-->
-    <div class="針鯖のスキル">
+    <div class="針鯖のスキル" id="skills">
       <h2>Skills</h2>
       <hr>
       <div class="box">
@@ -64,7 +64,7 @@
       ★★★★☆
     </div>
     <!--portfolio-->
-    <div class="針鯖のポートフォリオ">
+    <div class="針鯖のポートフォリオ" id="portfolio">
       <h2>Portfolio</h2>
       <hr>
       <div class="card">
