--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <!--header-->
     <header>
       <ul>
-        <li<a href="#about">針鯖とは</a><li>
+        <li><a href="#about">針鯖とは</a><li>
         <li><a href="#skills">針鯖のスキル</a></li>
         <li><a href="#portfolio">針鯖のポートフォリオ</a>/<li>
       </ul>
