--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
       <ul>
         <li><a href="#about"></a></li>
-        <li><a href="#skills"></a></li>
+        <li><a href="#skills"></a><li>
         <li><a href="#portfolio"></a></li>
       </ul>
     </header>
